--- a/agent/frontend/index.html
+++ b/agent/frontend/index.html
@@ -809,10 +809,10 @@
                                                 沒有資料
                                             </td>
                                         </tr>
-                                        <tr v-for="item in hierarchicalMembers" :key="item.userType + '_' + item.id">
+                                        <tr v-for="item in hierarchicalMembers" :key="item.id">
                                             <td>
                                                 <span class="badge" :class="item.userType === 'agent' ? 'bg-primary' : 'bg-success'">
-                                                    {{ item.userType === 'agent' ? '代理' : '會員' }}
+                                                    {{ item.userType === 'agent' ? getLevelShortName(item.level) : '會員' }}
                                                 </span>
                                             </td>
                                             <td>{{ item.id }}</td>
@@ -954,7 +954,7 @@
                                                                                 <div class="mb-3">
                                     <label class="form-label">代理级别</label>
                                     <input type="text" class="form-control" 
-                                           :value="getLevelName(currentManagingAgent.level + 1)" 
+                                           :value="getLevelName((currentMemberManagingAgent && currentMemberManagingAgent.level !== undefined ? currentMemberManagingAgent.level : currentManagingAgent.level) + 1)" 
                                            readonly disabled>
                                     <small class="form-text text-muted">您只能创建比目前层级低一級的代理</small>
                                 </div>
@@ -985,9 +985,9 @@
                                                 <div class="mb-3" v-if="newAgent.rebate_mode === 'percentage'">
                                                     <label class="form-label">退水比例 (%)</label>
                                                     <input type="number" class="form-control" v-model="newAgent.rebate_percentage" 
-                                                           step="0.01" min="0" :max="getMaxRebateForMarket(currentManagingAgent.market_type || 'D')" required>
+                                                           step="0.01" min="0" :max="((currentMemberManagingAgent && currentMemberManagingAgent.rebate_percentage !== undefined ? currentMemberManagingAgent.rebate_percentage : currentManagingAgent.rebate_percentage) || (currentManagingAgent.market_type === 'A' ? 0.011 : 0.041)) * 100" required>
                                                     <small class="form-text text-muted">
-                                                        可设定范围：0% - {{ getMaxRebateForMarket(currentManagingAgent.market_type || 'D') }}% ({{ getMarketInfo(currentManagingAgent.market_type || 'D').name }}限制)
+                                                        可设定范围：0% - {{ (((currentMemberManagingAgent && currentMemberManagingAgent.rebate_percentage !== undefined ? currentMemberManagingAgent.rebate_percentage : currentManagingAgent.rebate_percentage) || (currentManagingAgent.market_type === 'A' ? 0.011 : 0.041)) * 100).toFixed(1) }}% (當前代理限制)
                                                     </small>
                                                 </div>
                                                 <div class="mb-3">
@@ -1002,7 +1002,7 @@
                                                     </div>
                                                     <div class="card-body">
                                                         <ul class="mb-0 small">
-                                                            <li><strong>全拿所有退水：</strong>該代理获得所有可得退水 ({{ ((currentManagingAgent.rebate_percentage || currentManagingAgent.max_rebate_percentage || (currentManagingAgent.market_type === 'A' ? 0.011 : 0.041)) * 100).toFixed(1) }}%)</li>
+                                                            <li><strong>全拿所有退水：</strong>該代理获得所有可得退水 ({{ (((currentMemberManagingAgent && currentMemberManagingAgent.rebate_percentage !== undefined ? currentMemberManagingAgent.rebate_percentage : currentManagingAgent.rebate_percentage) || (currentManagingAgent.market_type === 'A' ? 0.011 : 0.041)) * 100).toFixed(1) }}%)</li>
                                                             <li><strong>设定具體比例：</strong>該代理获得指定比例的退水</li>
                                                             <li><strong>全退給下級：</strong>該代理不获得退水，全部給下級代理</li>
                                                         </ul>
