--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7277,8 +7277,7 @@
                         // 載入會員限紅設定
                         this.loadMemberBettingLimits();
                         
-                        // 啟動限紅更新監聽器
-                        this.startBettingLimitsMonitor();
+                        // 限紅設定會通過遊戲數據更新自動同步，無需手動監聽器
                     } else {
                         // 登录资讯不完整，重定向到登录頁面
                         sessionStorage.clear();
