--- a/deploy/frontend/index.html
+++ b/deploy/frontend/index.html
@@ -568,10 +568,12 @@
             display: flex;
             flex-direction: row;
             flex-wrap: nowrap;
-            overflow-x: auto;
+            overflow-x: hidden;
             gap: 4px;
             flex: 1;
             padding: 5px 0;
+            justify-content: space-between;
+            align-items: center;
         }
         
         .no-records {
@@ -2181,8 +2183,9 @@
             display: flex;
             gap: 4px;
             flex: 1;
-            flex-wrap: wrap;
+            flex-wrap: nowrap;
             align-items: center;
+            overflow-x: hidden;
         }
 
         /* 🔥 開獎紀錄中的球號樣式 - 響應式設計，確保所有球號都能顯示 */
@@ -3130,38 +3133,41 @@
             box-shadow: 0 2px 8px rgba(40,167,69,0.3);
         }
 
-        /* 历史开奖搜索樣式 */
+        /* 历史开奖搜索樣式 - 緊湊佈局 */
         .history-search {
-            padding: 15px;
+            padding: 10px 15px;
             background: #f8f9fa;
             border-bottom: 1px solid #dee2e6;
         }
 
         .search-row {
             display: flex;
-            gap: 15px;
+            gap: 10px;
             align-items: end;
-            flex-wrap: wrap;
+            flex-wrap: nowrap;
+            justify-content: space-between;
         }
 
         .search-item {
             display: flex;
             flex-direction: column;
-            gap: 5px;
+            gap: 3px;
+            flex: 1;
         }
 
         .search-item label {
-            font-size: 14px;
+            font-size: 12px;
             font-weight: 500;
             color: #495057;
         }
 
         .search-item input {
-            padding: 8px 12px;
+            padding: 6px 10px;
             border: 1px solid #dee2e6;
             border-radius: 4px;
-            font-size: 14px;
-            min-width: 120px;
+            font-size: 12px;
+            min-width: 80px;
+            width: 100%;
         }
 
         .search-item input:focus {
@@ -3172,14 +3178,15 @@
 
         .search-actions {
             display: flex;
-            gap: 8px;
+            gap: 6px;
+            flex-shrink: 0;
         }
 
         .search-btn, .clear-btn {
-            padding: 8px 16px;
+            padding: 6px 12px;
             border: none;
             border-radius: 4px;
-            font-size: 14px;
+            font-size: 12px;
             font-weight: 500;
             cursor: pointer;
             transition: all 0.2s ease;
